fix(ui-layout): add default max-width to View styles
refs: INSTUI-1693

This change just defaults the max-width of View to 100%
which would be overridden by a value from the maxWidth prop.
This will fix an issue that occurs when using TruncateText
as a child of Link.

TEST PLAN:
- create a Link with TruncateText as a child, with middle
truncation and a single word text content (like a url path)
- ensure the text is truncated to fit within its parent,
with no overlow
- verify there are no regressions visual regressions to
components using View
- unit tests should pass

Reviewed-on: https://gerrit.instructure.com/174861
Tested-by: Jenkins
QA-Review: Daniel Sasaki <dsasaki@instructure.com>
Product-Review: Ken Meleta <kmeleta@instructure.com>

--- a/packages/ui-layout/src/components/View/styles.css
+++ b/packages/ui-layout/src/components/View/styles.css
@@ -1,6 +1,7 @@
 .root {
   box-sizing: border-box;
   font-family: var(--fontFamily);
+  max-width: 100%;
 }
 
 .display--block {
